<?xml version="1.0"?>
<package format="2">
<name>mirte_telemetrix_cpp</name>
  <version>0.0.1</version>
  <description>Telemetrix cpp implementation</description>
  <maintainer email="tmxcpp@arend-jan.com">Arend-Jan van Hilten</maintainer> 
  <license>AGPL</license>
  <depend>boost</depend>
  
  <depend>std_msgs</depend>
  <depend>mirte_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <!-- <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
 -->
 <buildtool_depend>catkin</buildtool_depend>

  <!-- <export>
    <build_type>ament_cmake</build_type>
  </export> -->

</package>
